[package]
name = "oldmcskins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
fern = { version = "0.6.2", features = ["chrono", "colored"] }
humantime = "2.1.0"
log = "0.4.20"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive", "alloc"] }
tokio = { version = "1.36.0", features = ["full"] }
